Fix search toolbar alignment again

--- a/server/app/assets/sass/nav.sass
+++ b/server/app/assets/sass/nav.sass
@@ -23,7 +23,12 @@ body
     margin-left: 1%
 
   #search-tb
-    margin-left: 15%
+    margin-left: 1%
+    margin-right: 1%
+
+    @media #{$large-and-up}
+      margin-left: 15%
+      margin-right: 15%
 
 #nav-logo-container
   position: relative
